# trustedqsl

./: .gitignore  CMakeLists.txt  INSTALL  LICENSE.txt  Makefile.am  Makefile.in  README  TrustedQSL.spec  WindowsBuildSetup.txt  aclocal.m4  bottom.xpm  certtree.cpp  certtree.h  configure  configure.in  crqwiz.cpp  crqwiz.h  dxcc.cpp  dxcc.h  extwizard.cpp  extwizard.h  getpassword.cpp  getpassword.h  left.xpm  linux-make-appimage.sh  loadcertwiz.cpp  loadcertwiz.h  macos_createdmg.sh  org.arrl.trustedqsl.json  osx_createdmg.sh  qsodatadialog.cpp  qsodatadialog.h  right.xpm  stationdial.cpp  stationdial.h  sysconfig.h.in  top.xpm  tqsl.cpp  tqsl_prefs.cpp  tqsl_prefs.h  (+89 more)
apps/: CMakeLists.txt  ChangeLog.txt  LICENSE.rtf  certtree.cpp  certtree.h  crqwiz.cpp  crqwiz.h  dxcc.cpp  extwizard.cpp  extwizard.h  getpassword.cpp  getpassword.h  json_defs.h  jsonreader.cpp  jsonreader.h  jsonval.cpp  jsonval.h  jsonwriter.cpp  jsonwriter.h  loadcertwiz.cpp  loadcertwiz.h  loctree.cpp  loctree.h  makepot.sh  org.arrl.trustedqsl.desktop  org.arrl.trustedqsl.metainfo.xml  qsodatadialog.cpp  qsodatadialog.h  quick  stationdial.cpp  stationdial.h  tqsl.5  tqsl.cpp  tqsl.rc.in  tqsl_prefs.cpp  tqsl_prefs.h  tqslapp.h  tqslbuild.h  tqslctrls.h  tqslhelp.cpp  (+11 more)
apps/help/tqslapp/: addcertreq.htm  certreplace.htm  certreq.htm  certs-icons.htm  cmdline.htm  configops.htm  contents.hhc  index.htm  pref-log.htm  pref-opt.htm  renewing.htm  save-certificate.htm  signing.htm  signupload.htm  stnloc.htm  sync.htm
apps/lang/: makemo.sh  merge.sh  translators
apps/lang/ca_ES/: tqslapp.mo  tqslapp.po
apps/lang/de/: tqslapp.mo  tqslapp.po
apps/lang/es/: tqslapp.mo  tqslapp.po
apps/lang/fi/: tqslapp.mo  tqslapp.po
apps/lang/fr/: tqslapp.mo  tqslapp.po
apps/lang/hi_IN/: tqslapp.mo  tqslapp.po  wxstd.po
apps/lang/it/: tqslapp.mo  tqslapp.po
apps/lang/ja/: tqslapp.mo  tqslapp.po
apps/lang/pl_PL/: tqslapp.mo  tqslapp.po
apps/lang/pt/: tqslapp.mo  tqslapp.po
apps/lang/ru/: tqslapp.mo  tqslapp.po
apps/lang/sv_SE/: tqslapp.mo  tqslapp.po
apps/lang/tr_TR/: tqslapp.mo  tqslapp.po
apps/lang/zh/: tqslapp.mo  tqslapp.po
apps/lang/zh_CN/: tqslapp.mo  tqslapp.po
apps/lang/zh_TW/: tqslapp.mo  tqslapp.po
cmakemodules/: FindSQLite3.cmake  FindZLIB.cmake
debian/: changelog  clean  control  copyright  gbp.conf  gitlab-ci.yml  rules  tqsl.desktop  tqslcert.desktop  trustedqsl.5  trustedqsl.dirs  trustedqsl.install  trustedqsl.manpages  trustedqsl.menu  trustedqsl.xpm  watch
debian/patches/: 00-copy-LICENSE-to-COPYING.patch  0001-Added-minimal-CMake-module-for-finding-SQLite3-with-.patch  0001-Allow-TQSL-to-build-on-a-system-with-only-OpenSSL-1..patch  0001-Another-OpenSSL-1.1-fix.patch  0001-Dropped-language-that-is-unsupported-on-older-wxWidg.patch  0002-Reverted-patch-2ea0db84-from-upstream-Git-repo.patch  0003-Dropped-language-that-is-unsupported-on-older-wxWidg.patch  0004-Patch-around-wxString-bug-in-older-wxWidgets.patch  01-fix-library-configure-checks.patch  01-install-libtqsllib-so-in-usr-lib-trustedqsl.patch  02-863a887-Fix-improper-handling-of-certificate-import-causing-.patch  02-Fix-wxWidgets-argv-ambiguous-overload-for-gcc-5-6.patch  02-typos.patch  02-wx3.0-compat.patch  03-ea590af-Fix-improper-handling-of-certificate-import-causing-.patch  04-do-not-install-wxstd-mo-files.patch  10-icons-key16-xpm.patch  1012020-renewcrash.patch  99-update-generated-build-config.patch  openssl3.patch  reduce-cmake-version-requirement.diff  series
debian/source/: include-binaries  lintian-overrides
icons/: key16.xpm
src/: CMakeLists.txt  ChangeLog.txt  Doxyfile  LICENSE  adif.cpp  adif.h  cabrillo.cpp  cabrillo.h  config.xml  converter.cpp  dumptqsldata.cpp  gen_crq.cpp  load_cert.cpp  location.cpp  location.h  openssl_cert.cpp  openssl_cert.h  tqslconvert.cpp  tqslconvert.h  tqslerrno.h  tqsllib.cpp  tqsllib.h  tqsllib.rc.in  tqsllib2-x64.def  tqsllib2.def  windirent.h  winstrdefs.h  xml.cpp  xml.h
src/doxygen/html/: adif_8h.html  adif_8h_source.html  annotated.html  cabrillo_8h.html  cabrillo_8h_source.html  classes.html  doxygen_crawl.html  files.html  functions.html  functions_vars.html  globals.html  globals_d.html  globals_defs.html  globals_enum.html  globals_func.html  globals_g.html  globals_p.html  globals_t.html  globals_type.html  globals_vars.html  group__ADIF.html  group__Cabrillo.html  group__CertStuff.html  group__Convert.html  group__Data.html  group__Sign.html  group__Util.html  index.html  menudata.js  modules.html  structTQSL__QSO__RECORD-members.html  structTQSL__QSO__RECORD.html  structtQSL__Date-members.html  structtQSL__Date.html  structtQSL__Time-members.html  structtQSL__Time.html  structtqsl__adifFieldDefinitions-members.html  structtqsl__adifFieldDefinitions.html  structtqsl__adifFieldResults-members.html  structtqsl__adifFieldResults.html  (+14 more)
tqslcert_help/: contents.hhc
win32-msi/tqsl-install/: Product.wxs  helpfrag.wxs  langfrags.wxs  tqsl-install.wixproj
